# atc2026-id968

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: example_calibration.json
fathom/: __init__.py  engine.py
fathom/actuator/: depth_actuator.py
fathom/calibration/: __init__.py  calibrate.py
fathom/controller/: load_controller.py
fathom/detector/: regime_detector.py
fathom/integration/: vllm_adapter.py
fathom/scheduler/: elastic_scheduler.py
figures/: fig10_scaling.py  fig11_oracle.py  fig12_decomp.py  fig1_teaser.py  fig2_motivation.py  fig5_pareto.py  fig6_bursty.py  fig7_quality.py  fig8_calibration.py  fig9_signal.py
scripts/: make_figures.py
tests/: test_components.py
tools/: run_calibration.py
